--- a/requirements.txt
+++ b/requirements.txt
@@ -1,158 +1,284 @@
-aiohttp==3.8.4
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-amqp==5.1.1
-antlr4-python3-runtime==4.9.3
-anyio==3.6.2
-appdirs==1.4.4
-asttokens==2.2.1
-async-timeout==4.0.2
-asyncssh==2.13.2
-atpublic==4.0
-attrs==23.1.0
-backcall==0.2.0
-backports.zoneinfo==0.2.1
-beautifulsoup4 @ file:///home/conda/feedstock_root/build_artifacts/beautifulsoup4_1680888073205/work
-billiard==4.1.0
-Brotli @ file:///home/conda/feedstock_root/build_artifacts/brotli-split_1695989787169/work
-celery==5.3.1
-certifi==2023.7.22
-cffi==1.15.1
-charset-normalizer==3.2.0
-click==8.1.4
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-comm==0.1.2
-contourpy==1.0.6
-cryptography==41.0.2
-cycler==0.11.0
-debugpy==1.6.4
-decorator==5.1.1
-dictdiffer==0.9.0
-diskcache==5.6.1
-dpath==2.1.6
-dulwich==0.21.5
-dvc==3.5.1
-dvc-data==2.5.0
-dvc-http==2.30.2
-dvc-objects==0.23.0
-dvc-render==0.5.3
-dvc-studio-client==0.11.0
-dvc-task==0.3.0
-executing==1.2.0
-filelock==3.12.2
-flatten-dict==0.4.2
-flufl.lock==7.1.1
-fonttools==4.38.0
-frozendict @ file:///home/conda/feedstock_root/build_artifacts/frozendict_1695415028216/work
-frozenlist==1.3.3
-fsspec==2023.6.0
-funcy==2.0
-gitdb==4.0.10
-GitPython==3.1.32
-grandalf==0.8
-h11==0.14.0
-html5lib @ file:///home/conda/feedstock_root/build_artifacts/html5lib_1592930327044/work
-httptools==0.5.0
-hydra-core==1.3.2
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
-importlib-resources==6.0.0
-ipykernel==6.19.4
-ipython==8.7.0
-iterative-telemetry==0.0.8
-jedi==0.18.2
-joblib==1.3.1
-jupyter==1.0.0
-jupyter-console==6.6.3
-jupyter_client==7.4.8
-jupyter_core==5.1.1
-kiwisolver==1.4.4
-kombu==5.3.1
-lxml @ file:///home/conda/feedstock_root/build_artifacts/lxml_1695546683514/work
-markdown-it-py==3.0.0
-matplotlib==3.6.2
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-multidict==6.0.4
-multitasking @ file:///home/conda/feedstock_root/build_artifacts/multitasking_1622493113162/work
-munkres==1.1.4
-nanotime==0.5.2
-nest-asyncio==1.5.6
-networkx==3.1
-numpy @ file:///home/conda/feedstock_root/build_artifacts/numpy_1687808301083/work
-omegaconf==2.3.0
-orjson==3.9.2
-packaging==22.0
-pandas==1.3.3
-parso==0.8.3
-pathspec==0.11.1
-patsy @ file:///home/conda/feedstock_root/build_artifacts/patsy_1665356157073/work
-peewee @ file:///home/conda/feedstock_root/build_artifacts/peewee_1695472556640/work
-pickleshare==0.7.5
-Pillow==9.3.0
-platformdirs==3.8.1
-ply==3.11
-pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1695993109846/work
-prompt-toolkit==3.0.36
-psutil==5.9.4
-pure-eval==0.2.2
-pycparser==2.21
-pydantic==1.10.2
-pydot==1.4.2
-pygit2==1.12.2
-Pygments==2.13.0
-pygtrie==2.5.0
-pyparsing==3.0.9
-PyQt5==5.15.9
-PyQt5-sip==12.12.2
-PySocks @ file:///home/conda/feedstock_root/build_artifacts/pysocks_1661604839144/work
-python-dateutil==2.8.2
-python-dotenv==0.21.0
-pytz==2022.7
-pyzmq==24.0.1
-qtconsole==5.4.3
-QtPy==2.3.1
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1684774241324/work
-rich==13.4.2
-ruamel.yaml==0.17.32
-ruamel.yaml.clib==0.2.7
-scikit-learn==1.0
-scipy==1.10.1
-scmrepo==1.0.4
-seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1696262444380/work
-shortuuid==1.0.11
-shtab==1.6.2
-sip @ file:///home/conda/feedstock_root/build_artifacts/sip_1695399298295/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
-smmap==5.0.0
-sniffio==1.3.0
-soupsieve @ file:///home/conda/feedstock_root/build_artifacts/soupsieve_1693929250441/work
-sqltrie==0.7.0
-stack-data==0.6.2
-statsmodels @ file:///home/conda/feedstock_root/build_artifacts/statsmodels_1696548155057/work
-tabulate==0.9.0
-threadpoolctl==3.1.0
-toml @ file:///home/conda/feedstock_root/build_artifacts/toml_1604308577558/work
-tomli @ file:///home/conda/feedstock_root/build_artifacts/tomli_1644342247877/work
-tomlkit==0.11.8
-tornado==6.2
-tqdm==4.65.0
-traitlets==5.8.0
-typing_extensions==4.4.0
-tzdata==2023.3
-ui==0.1.4
-unicodedata2 @ file:///home/conda/feedstock_root/build_artifacts/unicodedata2_1695847997538/work
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1696434355823/work
-uvicorn==0.20.0
-uvloop==0.17.0
-vine==5.0.0
-voluptuous==0.13.1
-watchfiles==0.18.1
-wcwidth==0.2.5
-webencodings @ file:///home/conda/feedstock_root/build_artifacts/webencodings_1694681268211/work
-websockets==10.4
-yarl==1.9.2
-yfinance @ file:///home/conda/feedstock_root/build_artifacts/yfinance_1696469211849/work
-zc.lockfile==3.0.post1
-zipp==3.16.0
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=conda_forge
+_openmp_mutex=4.5=2_gnu
+alsa-lib=1.2.10=hd590300_0
+anyio=4.0.0=pyhd8ed1ab_0
+appdirs=1.4.4=pyh9f0ad1d_0
+argon2-cffi=23.1.0=pyhd8ed1ab_0
+argon2-cffi-bindings=21.2.0=py38h01eb140_4
+arrow=1.3.0=pyhd8ed1ab_0
+asttokens=2.4.0=pyhd8ed1ab_0
+async-lru=2.0.4=pyhd8ed1ab_0
+attr=2.5.1=h166bdaf_1
+attrs=23.1.0=pyh71513ae_1
+babel=2.12.1=pyhd8ed1ab_1
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=pyhd8ed1ab_3
+backports.functools_lru_cache=1.6.5=pyhd8ed1ab_0
+beautifulsoup4=4.12.2=pyha770c72_0
+bleach=6.1.0=pyhd8ed1ab_0
+brotli=1.1.0=hd590300_1
+brotli-bin=1.1.0=hd590300_1
+brotli-python=1.1.0=py38h17151c0_1
+bzip2=1.0.8=h7f98852_4
+ca-certificates=2023.7.22=hbcca054_0
+cached-property=1.5.2=hd8ed1ab_1
+cached_property=1.5.2=pyha770c72_1
+cairo=1.16.0=h0c91306_1017
+certifi=2023.7.22=pyhd8ed1ab_0
+cffi=1.16.0=py38h6d47a40_0
+charset-normalizer=3.3.0=pyhd8ed1ab_0
+comm=0.1.4=pyhd8ed1ab_0
+contourpy=1.1.1=py38h7f3f72f_1
+cryptography=41.0.4=py38hcdda232_0
+cycler=0.12.1=pyhd8ed1ab_0
+dbus=1.13.6=h5008d03_3
+debugpy=1.8.0=py38h17151c0_1
+decorator=5.1.1=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
+entrypoints=0.4=pyhd8ed1ab_0
+exceptiongroup=1.1.3=pyhd8ed1ab_0
+executing=1.2.0=pyhd8ed1ab_0
+expat=2.5.0=hcb278e6_1
+font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+font-ttf-inconsolata=3.000=h77eed37_0
+font-ttf-source-code-pro=2.038=h77eed37_0
+font-ttf-ubuntu=0.83=hab24e00_0
+fontconfig=2.14.2=h14ed4e7_0
+fonts-conda-ecosystem=1=0
+fonts-conda-forge=1=0
+fonttools=4.43.1=py38h01eb140_0
+fqdn=1.5.1=pyhd8ed1ab_0
+freetype=2.12.1=h267a509_2
+frozendict=2.3.8=py38h01eb140_1
+gettext=0.21.1=h27087fc_0
+glib=2.78.0=hfc55251_0
+glib-tools=2.78.0=hfc55251_0
+gmp=6.2.1=h58526e2_0
+graphite2=1.3.13=h58526e2_1001
+gst-plugins-base=1.22.6=h8e1006c_2
+gstreamer=1.22.6=h98fc4e7_2
+harfbuzz=8.2.1=h3d44ed6_0
+html5lib=1.1=pyh9f0ad1d_0
+icu=73.2=h59595ed_0
+idna=3.4=pyhd8ed1ab_0
+importlib-metadata=6.8.0=pyha770c72_0
+importlib-resources=6.1.0=pyhd8ed1ab_0
+importlib_metadata=6.8.0=hd8ed1ab_0
+importlib_resources=6.1.0=pyhd8ed1ab_0
+ipykernel=6.25.2=pyh2140261_0
+ipython=8.12.2=pyh41d4057_0
+ipython_genutils=0.2.0=py_1
+ipywidgets=8.1.1=pyhd8ed1ab_0
+isoduration=20.11.0=pyhd8ed1ab_0
+jedi=0.19.1=pyhd8ed1ab_0
+jinja2=3.1.2=pyhd8ed1ab_1
+joblib=1.3.2=pyhd8ed1ab_0
+json5=0.9.14=pyhd8ed1ab_0
+jsonpointer=2.4=py38h578d9bd_3
+jsonschema=4.19.1=pyhd8ed1ab_0
+jsonschema-specifications=2023.7.1=pyhd8ed1ab_0
+jsonschema-with-format-nongpl=4.19.1=pyhd8ed1ab_0
+jupyter=1.0.0=pyhd8ed1ab_10
+jupyter-lsp=2.2.0=pyhd8ed1ab_0
+jupyter_client=8.3.1=pyhd8ed1ab_0
+jupyter_console=6.6.3=pyhd8ed1ab_0
+jupyter_core=5.3.2=py38h578d9bd_0
+jupyter_events=0.7.0=pyhd8ed1ab_2
+jupyter_server=2.7.3=pyhd8ed1ab_1
+jupyter_server_terminals=0.4.4=pyhd8ed1ab_1
+jupyterlab=4.0.6=pyhd8ed1ab_0
+jupyterlab_pygments=0.2.2=pyhd8ed1ab_0
+jupyterlab_server=2.25.0=pyhd8ed1ab_0
+jupyterlab_widgets=3.0.9=pyhd8ed1ab_0
+keyutils=1.6.1=h166bdaf_0
+kiwisolver=1.4.5=py38h7f3f72f_1
+krb5=1.21.2=h659d440_0
+lame=3.100=h166bdaf_1003
+lcms2=2.15=h7f713cb_2
+ld_impl_linux-64=2.40=h41732ed_0
+lerc=4.0.0=h27087fc_0
+libblas=3.9.0=18_linux64_openblas
+libbrotlicommon=1.1.0=hd590300_1
+libbrotlidec=1.1.0=hd590300_1
+libbrotlienc=1.1.0=hd590300_1
+libcap=2.69=h0f662aa_0
+libcblas=3.9.0=18_linux64_openblas
+libclang=15.0.7=default_h7634d5b_3
+libclang13=15.0.7=default_h9986a30_3
+libcups=2.3.3=h4637d8d_4
+libdeflate=1.19=hd590300_0
+libedit=3.1.20191231=he28a2e2_2
+libevent=2.1.12=hf998b51_1
+libexpat=2.5.0=hcb278e6_1
+libffi=3.4.2=h7f98852_5
+libflac=1.4.3=h59595ed_0
+libgcc-ng=13.2.0=h807b86a_2
+libgcrypt=1.10.1=h166bdaf_0
+libgfortran-ng=13.2.0=h69a702a_2
+libgfortran5=13.2.0=ha4646dd_2
+libglib=2.78.0=hebfc3b9_0
+libgomp=13.2.0=h807b86a_2
+libgpg-error=1.47=h71f35ed_0
+libiconv=1.17=h166bdaf_0
+libjpeg-turbo=2.1.5.1=hd590300_1
+liblapack=3.9.0=18_linux64_openblas
+libllvm15=15.0.7=h5cf9203_3
+libnsl=2.0.0=hd590300_1
+libogg=1.3.4=h7f98852_1
+libopenblas=0.3.24=pthreads_h413a1c8_0
+libopus=1.3.1=h7f98852_1
+libpng=1.6.39=h753d276_0
+libpq=15.4=hfc447b1_2
+libsndfile=1.2.2=hc60ed4a_1
+libsodium=1.0.18=h36c2ea0_1
+libsqlite=3.43.0=h2797004_0
+libstdcxx-ng=13.2.0=h7e041cc_2
+libsystemd0=254=h3516f8a_0
+libtiff=4.6.0=h29866fb_1
+libuuid=2.38.1=h0b41bf4_0
+libvorbis=1.3.7=h9c3ff4c_0
+libwebp-base=1.3.2=hd590300_0
+libxcb=1.15=h0b41bf4_0
+libxkbcommon=1.6.0=h5d7e998_0
+libxml2=2.11.5=h232c23b_1
+libxslt=1.1.37=h0054252_1
+libzlib=1.2.13=hd590300_5
+lxml=4.9.3=py38h0ef1326_1
+lz4-c=1.9.4=hcb278e6_0
+markupsafe=2.1.3=py38h01eb140_1
+matplotlib=3.7.3=py38h578d9bd_0
+matplotlib-base=3.7.3=py38h58ed7fa_0
+matplotlib-inline=0.1.6=pyhd8ed1ab_0
+mistune=3.0.1=pyhd8ed1ab_0
+mpg123=1.32.3=h59595ed_0
+multitasking=0.0.9=pyhd8ed1ab_0
+munkres=1.1.4=pyh9f0ad1d_0
+mysql-common=8.0.33=hf1915f5_5
+mysql-libs=8.0.33=hca2cd23_5
+nbclient=0.8.0=pyhd8ed1ab_0
+nbconvert=7.9.2=pyhd8ed1ab_0
+nbconvert-core=7.9.2=pyhd8ed1ab_0
+nbconvert-pandoc=7.9.2=pyhd8ed1ab_0
+nbformat=5.9.2=pyhd8ed1ab_0
+ncurses=6.4=hcb278e6_0
+nest-asyncio=1.5.6=pyhd8ed1ab_0
+notebook=7.0.4=pyhd8ed1ab_0
+notebook-shim=0.2.3=pyhd8ed1ab_0
+nspr=4.35=h27087fc_0
+nss=3.94=h1d7d5a4_0
+numpy=1.24.4=py38h59b608b_0
+openjpeg=2.5.0=h488ebb8_3
+openssl=3.1.3=hd590300_0
+overrides=7.4.0=pyhd8ed1ab_0
+packaging=23.2=pyhd8ed1ab_0
+pandas=2.0.3=py38h01efb38_1
+pandoc=3.1.3=h32600fe_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
+parso=0.8.3=pyhd8ed1ab_0
+patsy=0.5.3=pyhd8ed1ab_0
+pcre2=10.40=hc3806b6_0
+peewee=3.16.3=py38h39d08e6_1
+pexpect=4.8.0=pyh1a96a4e_2
+pickleshare=0.7.5=py_1003
+pillow=10.0.1=py38h71741d6_1
+pip=23.2.1=pyhd8ed1ab_0
+pixman=0.42.2=h59595ed_0
+pkgutil-resolve-name=1.3.10=pyhd8ed1ab_1
+platformdirs=3.11.0=pyhd8ed1ab_0
+ply=3.11=py_1
+pooch=1.7.0=pyhd8ed1ab_4
+prometheus_client=0.17.1=pyhd8ed1ab_0
+prompt-toolkit=3.0.39=pyha770c72_0
+prompt_toolkit=3.0.39=hd8ed1ab_0
+psutil=5.9.5=py38h01eb140_1
+pthread-stubs=0.4=h36c2ea0_1001
+ptyprocess=0.7.0=pyhd3deb0d_0
+pulseaudio-client=16.1=hb77b528_5
+pure_eval=0.2.2=pyhd8ed1ab_0
+pycparser=2.21=pyhd8ed1ab_0
+pygments=2.16.1=pyhd8ed1ab_0
+pyparsing=3.1.1=pyhd8ed1ab_0
+pyqt=5.15.9=py38hffdaa6c_5
+pyqt5-sip=12.12.2=py38h17151c0_5
+pysocks=1.7.1=pyha2e5f31_6
+python=3.8.17=he550d4f_0_cpython
+python-dateutil=2.8.2=pyhd8ed1ab_0
+python-fastjsonschema=2.18.1=pyhd8ed1ab_0
+python-json-logger=2.0.7=pyhd8ed1ab_0
+python-tzdata=2023.3=pyhd8ed1ab_0
+python_abi=3.8=2_cp38
+pytz=2023.3.post1=pyhd8ed1ab_0
+pyyaml=6.0.1=py38h01eb140_1
+pyzmq=25.1.1=py38h509eb50_1
+qt-main=5.15.8=hc47bfe8_16
+qtconsole-base=5.4.4=pyha770c72_0
+qtpy=2.4.0=pyhd8ed1ab_0
+readline=8.2=h8228510_1
+referencing=0.30.2=pyhd8ed1ab_0
+requests=2.31.0=pyhd8ed1ab_0
+rfc3339-validator=0.1.4=pyhd8ed1ab_0
+rfc3986-validator=0.1.1=pyh9f0ad1d_0
+rpds-py=0.10.4=py38h0cc4f7c_0
+scikit-learn=1.3.1=py38ha25d942_1
+scipy=1.10.1=py38h59b608b_3
+seaborn=0.13.0=hd8ed1ab_0
+seaborn-base=0.13.0=pyhd8ed1ab_0
+send2trash=1.8.2=pyh41d4057_0
+setuptools=68.2.2=pyhd8ed1ab_0
+sip=6.7.11=py38h17151c0_1
+six=1.16.0=pyh6c4a22f_0
+sniffio=1.3.0=pyhd8ed1ab_0
+soupsieve=2.5=pyhd8ed1ab_1
+sqlite=3.43.0=h2c6b66d_0
+stack_data=0.6.2=pyhd8ed1ab_0
+statsmodels=0.14.0=py38h7f0c24c_2
+terminado=0.17.1=pyh41d4057_0
+threadpoolctl=3.2.0=pyha21a80b_0
+tinycss2=1.2.1=pyhd8ed1ab_0
+tk=8.6.13=h2797004_0
+toml=0.10.2=pyhd8ed1ab_0
+tomli=2.0.1=pyhd8ed1ab_0
+tornado=6.3.3=py38h01eb140_1
+traitlets=5.11.2=pyhd8ed1ab_0
+types-python-dateutil=2.8.19.14=pyhd8ed1ab_0
+typing-extensions=4.8.0=hd8ed1ab_0
+typing_extensions=4.8.0=pyha770c72_0
+typing_utils=0.1.0=pyhd8ed1ab_0
+tzdata=2023c=h71feb2d_0
+unicodedata2=15.1.0=py38h01eb140_0
+uri-template=1.3.0=pyhd8ed1ab_0
+urllib3=2.0.6=pyhd8ed1ab_0
+wcwidth=0.2.8=pyhd8ed1ab_0
+webcolors=1.13=pyhd8ed1ab_0
+webencodings=0.5.1=pyhd8ed1ab_2
+websocket-client=1.6.4=pyhd8ed1ab_0
+wheel=0.41.2=pyhd8ed1ab_0
+widgetsnbextension=4.0.9=pyhd8ed1ab_0
+xcb-util=0.4.0=hd590300_1
+xcb-util-image=0.4.0=h8ee46fc_1
+xcb-util-keysyms=0.4.0=h8ee46fc_1
+xcb-util-renderutil=0.3.9=hd590300_1
+xcb-util-wm=0.4.1=h8ee46fc_1
+xkeyboard-config=2.40=hd590300_0
+xorg-kbproto=1.0.7=h7f98852_1002
+xorg-libice=1.1.1=hd590300_0
+xorg-libsm=1.2.4=h7391055_0
+xorg-libx11=1.8.6=h8ee46fc_0
+xorg-libxau=1.0.11=hd590300_0
+xorg-libxdmcp=1.1.3=h7f98852_0
+xorg-libxext=1.3.4=h0b41bf4_2
+xorg-libxrender=0.9.11=hd590300_0
+xorg-renderproto=0.11.1=h7f98852_1002
+xorg-xextproto=7.3.0=h0b41bf4_1003
+xorg-xf86vidmodeproto=2.3.1=h7f98852_1002
+xorg-xproto=7.0.31=h7f98852_1007
+xz=5.2.6=h166bdaf_0
+yaml=0.2.5=h7f98852_2
+yfinance=0.2.31=pyhd8ed1ab_0
+zeromq=4.3.4=h9c3ff4c_1
+zipp=3.17.0=pyhd8ed1ab_0
+zlib=1.2.13=hd590300_5
+zstd=1.5.5=hfc55251_0
